repsonds to mobile devices and taps on screens

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1.0"/>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
     <meta charset="utf-8">
     <title>Flippy Bard</title>
     <script type="text/javascript" src="phaser.min.js"></script>
